# usegin

./: README.md  lihu.CLAUDE.md  nitsan.CLAUDE.md  oria.CLAUDE.md
.claude/agents/: companion.md  mark.md  poll.md  ron.md  sam.md  wes.md  yohai.md  zisser.md
.claude/builds/: active.json
.claude/commands/: alias-skill.md  ask-us.md  autosync.md  ci.md  continue.md  delegate.md  end.md  figma-apply.md  figma-diff.md  figma.md  find-session.md  handoff-continue.md  handoff.md  implement-spec.md  issue-window.md  lean.md  ou-cw.md  pick-session.md  plan-align.md  push-migrations-to-production.md  push-to-prod.md  ralph.md  rate.md  read-session.md  retro.md  summarize-agent-conversation.md  summarize-logs-and-changes.md  summarize-logs.md  sync-sessions.md  ux.md  uxdev.md  what-did-i-miss.md  write-spec.md  (+2 more)
oria/: README.md
usegin/: CLAUDE.md  Gin.md  README.md  inbox-pending.md  things-we-grow.md  values.md
usegin/oria-crazy-space/slack-ingest-poc/: .gitignore  README.md  pyproject.toml
usegin/oria-crazy-space/slack-ingest-poc/poc/: __init__.py  indexer.py  normalizer.py  querier.py  slack_reader.py
usegin/oria-crazy-space/slack-ingest-poc/scripts/: probe-live.sh  probe_live.py  run-e2e.sh  run_e2e.py
usegin/oria-crazy-space/slack-ingest-poc/tests/fixtures/: social-history-2026-04-28.json
usegin/oria-crazy-space/slack-ingest-poc/tests/integration/: test_e2e_fixture.py
usegin/oria-crazy-space/slack-ingest-poc/tests/unit/: test_indexer_querier.py  test_normalizer.py
zisser/: CLAUDE.md  README.md  agents.md  persona.md  routing.md  tools.md  zisser.md
(+1932 files in other folders)
