[project]
name = "slack-ingest-poc"
version = "0.1.0"
description = "Overnight POC — Slack ingestion -> normalize -> JSONL index -> query (Oria, 2026-04-28→29)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
